src/main/metadata/objects/CaseDeadelineCalc__mdt.object
<CustomObject>
    <fields>
        <fullName>CaseDeadelineCalc10__c</fullName>
        <label>CaseDeadelineCalc10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseDeadelineCalc11__c</fullName>
        <label>CaseDeadelineCalc11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseDeadelineCalc12__c</fullName>
        <label>CaseDeadelineCalc12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CaseDeadelineCalc</label>
    <pluralLabel>CaseDeadelineCalcs</pluralLabel>
</CustomObject>